--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  logger: ^1.1.0
+  video_player: ^2.4.7
+  path_provider: ^2.0.11
+  mmkv_flutter: ^1.0.10
+  webview_flutter: ^3.0.4
   permission_handler: ^10.2.0
 
 dev_dependencies:
@@ -64,6 +69,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/jsons/
+    - assets/video/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
