--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,11 +35,10 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.lc.basics_flutter"
         // You can update the following values to match your application needs. 
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion flutter.minSdkVersion
+        minSdkVersion 18
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -49,7 +48,17 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+//            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.app_key
+        }
+    }
+
+    signingConfigs {
+        app_key {
+            storeFile file("../../qxbstudent.jks")
+            storePassword "qxbstudent"
+            keyAlias "qxbstudent"
+            keyPassword "qxbstudent"
         }
     }
 }
