--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,19 +38,13 @@ android {
         applicationId "com.lc.basics_flutter"
         // You can update the following values to match your application needs. 
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 18
+        minSdkVersion 19
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-    }
-
-    buildTypes {
-        release {
-            // TODO: Add your own signing config for the release build.
-            // Signing with the debug keys for now, so `flutter run --release` works.
-//            signingConfig signingConfigs.debug
-            signingConfig signingConfigs.app_key
-        }
+//        ndk {
+//            abiFilters "armeabbi-v7a", "armeabi-v8a"
+//        }
     }
 
     signingConfigs {
@@ -59,6 +53,18 @@ android {
             storePassword "qxbstudent"
             keyAlias "qxbstudent"
             keyPassword "qxbstudent"
+        }
+    }
+
+    buildTypes {
+//
+//        debug {
+//            signingConfig signingConfigs.app_key
+//        }
+        release {
+            // Signing with the debug keys for now, so `flutter run --release` works.
+            // signingConfig signingConfigs.debug
+            signingConfig signingConfigs.app_key
         }
     }
 }
